--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,36 +1,21 @@
-cmake_minimum_required(VERSION 3.4)
+cmake_minimum_required ( версия 3.10)
+проект (форматирование)
 
-set(CMAKE_CXX_STANDARD 11)
+набор (CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-option(BUILD_EXAMPLES "Build examples" OFF)
+add_library (formatter STATIC formatter_lib/форматер.СРР)
+include_directories(formatter_lib)
 
-project(print)
+add_library(formatter_ex STATIC formatter_ex_lib/formatter_ex.СРР)
+include_directories(formatter_ex_lib formatter_lib)
+target_link_libraries (форматтер_ex formatter)
 
-add_library(print STATIC ${CMAKE_CURRENT_SOURCE_DIR}/sources/print.cpp)
+add_executable(hello_world hello_world_application/hello_world.СРР)
+target_link_libraries(hello_world formatter formatter_ex)
 
-target_include_directories(print PUBLIC
-  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-  $<INSTALL_INTERFACE:include>
-)
+add_library (solver_lib статический solver_lib/решатель.СРР)
+include_directories(solver_lib)
 
-if(BUILD_EXAMPLES)
-  file(GLOB EXAMPLE_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/examples/*.cpp")
-  foreach(EXAMPLE_SOURCE ${EXAMPLE_SOURCES})
-    get_filename_component(EXAMPLE_NAME ${EXAMPLE_SOURCE} NAME_WE)
-    add_executable(${EXAMPLE_NAME} ${EXAMPLE_SOURCE})
-    target_link_libraries(${EXAMPLE_NAME} print)
-    install(TARGETS ${EXAMPLE_NAME}
-      RUNTIME DESTINATION bin
-    )
-  endforeach(EXAMPLE_SOURCE ${EXAMPLE_SOURCES})
-endif()
-
-install(TARGETS print
-    EXPORT print-config
-    ARCHIVE DESTINATION lib
-    LIBRARY DESTINATION lib
-)
-
-install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/ DESTINATION include)
-install(EXPORT print-config DESTINATION cmake)
+add_executable (solver solver_application / equation.СРР)
+target_link_libraries(solver formatter formatter_ex solver_lib)
