--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,9 @@
 language: cpp
+os:
+  - osx
+jobs:
+  include:
+  - name: "all projects"
 
 script:
 -cmake -H. -B_build -DCMAKE_INSTALL_PREFIX=_install
