--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,11 @@
-language: cpp
-os:
-  - osx
-jobs:
-  include:
-  - name: "all projects"
-
-before_install:
+language: ruby
+rvm:
+ - 2.4.2
+ - jruby
+ before_install:
   - gem install rake
-  
+language: cpp
+
 script:
 -cmake -H. -B_build -DCMAKE_INSTALL_PREFIX=_install
 -cmake --build _build
@@ -16,7 +14,7 @@ script:
 addons:
   apt:
     sources:
-      - george-edison55-precise-backports
+ - george-edison55-precise-backports
     packages:
       - cmake
       - cmake-data
